--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "1.4.1",
@@ -60,6 +60,7 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "swiper": "^11.2.9",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
